# SpiderBot

./: README.md
spider/: Assembly1.iam  Assembly4.iam  Assembly5.iam  Servo horn v2_CPY1.ipt  Tower Pro MG996R_CPY.ipt  arm_link_up.ipt  arm_mid_link.ipt  arm_mid_link2.ipt  arm_under_link.ipt  bracket1-01.ipt  bracket1.ipt  demir1_CPY1.ipt  demir2_CPY1.ipt  shoulder_link.ipt  spider.ipj  spiderbot_first_leg.iam
spider/OldVersions/: Assembly1.0002.iam  Assembly5.0005.iam  arm_mid_link.0002.ipt  arm_mid_link2.0003.ipt  bracket1.0001.ipt  shoulder_link.0002.ipt
spider_bringup/: CMakeLists.txt  package.xml
spider_bringup/launch/: spider.launch  spider_model.launch  spider_remote.launch
spider_bringup/launch/includes/: description.launch.xml
spider_bringup/src/: spider_diagnostics.cpp
spider_description/: CMakeLists.txt  package.xml
spider_description/meshes/bases/: base_box.stl
spider_description/meshes/legs/: lowleg.stl  lowleg_link.stl  s_link.stl  ulink.stl  upleg_link.stl
spider_description/meshes/motors/: clamp stepmotor nema 17.STL  servo.stl
spider_description/meshes/sbc/: Arduino_mega.stl
spider_description/rviz/: spider.rviz
spider_description/urdf/: common_properties.xacro  spider.gazebo.xacro  spider_spider.urdf.xacro
spider_msgs/: CMakeLists.txt  package.xml
