<?xml version="1.0"?>
<package format="2">
  <name>spider_bringup</name>
  <version>1.2.6</version>
  <description>
    roslaunch scripts for starting the spider
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_bringup</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>spider_msgs</depend>
 
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  
  <!--  <exec_depend>turtlebot3_description</exec_depend>
        <exec_depend>turtlebot3_teleop</exec_depend>

        <exec_depend>hls_lfcd_lds_driver</exec_depend>
        
        <exec_depend>realsense_camera</exec_depend> for TurtleBot3 Waffle using Intel RealSense Camera -->
  <!-- <exec_depend>raspicam_node</exec_depend> for TurtleBot3 Waffle Pi using Raspberry Pi Camera -->
</package>
